--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,74 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 body {
-  background-color: bisque;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
+}
+button:hover {
+  cursor: pointer;
+  background-color: #d9ddd6;
+}
+ul {
+  list-style-type: none; 
+}
+
+.container {
+  min-width: 700px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+h1 {
+  color: #141414;
+  font-size: 3rem;
+}
+.todo-form {
+  margin: 40px 0px;
+}
+.todo-input {
+  width: 250px;
+border: 1px solid #9e9c9c;
+  outline: none;
+  padding: 10px;
+  margin-right: 10px;
+  font-size: 1rem;
+}
+.add-button {
+  background-color: #f8f6f6;
+  color: #141414;
+  border: none;
+  outline: none;
+  padding: 7px;
+  font-size: 1.2rem;
+}
+.todo-items {
+  min-width: 350px;
+}
+.item {
+  border: 1px solid #9e9c9c;
+  background-color: #f8f6f6;
+  padding: 10px;
+  font-size: 1.1rem;
+}
+.checkbox {
+  margin-right: 10px;
+}
+.delete-button {
+  float: right;
+  background-color: #f8f6f6;
+border: 1px solid #9e9c9c;
+  outline: none;
+  padding: 2px 5px;
+  margin-left: 10px;
+  font-size: 1.1rem;
+  font-weight: 550;
+}
+.checked { 
+  text-decoration: line-through;
 }
