--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
 }
+
 body {
   width: 100vw;
   min-height: 100vh;
@@ -9,12 +10,14 @@ body {
   justify-content: center;
   font-family: sans-serif;
 }
+
 button:hover {
   cursor: pointer;
   background-color: #d9ddd6;
 }
+
 ul {
-  list-style-type: none; 
+  list-style-type: none;
 }
 
 .container {
@@ -24,21 +27,25 @@ ul {
   align-items: center;
   padding: 20px;
 }
+
 h1 {
   color: #141414;
   font-size: 3rem;
 }
+
 .todo-form {
-  margin: 40px 0px;
+  margin: 40px 0;
 }
+
 .todo-input {
   width: 250px;
-border: 1px solid #9e9c9c;
+  border: 1px solid #9e9c9c;
   outline: none;
   padding: 10px;
   margin-right: 10px;
   font-size: 1rem;
 }
+
 .add-button {
   background-color: #f8f6f6;
   color: #141414;
@@ -47,28 +54,33 @@ border: 1px solid #9e9c9c;
   padding: 7px;
   font-size: 1.2rem;
 }
+
 .todo-items {
   min-width: 350px;
 }
+
 .item {
   border: 1px solid #9e9c9c;
   background-color: #f8f6f6;
   padding: 10px;
   font-size: 1.1rem;
 }
+
 .checkbox {
   margin-right: 10px;
 }
+
 .delete-button {
   float: right;
   background-color: #f8f6f6;
-border: 1px solid #9e9c9c;
+  border: 1px solid #9e9c9c;
   outline: none;
   padding: 2px 5px;
   margin-left: 10px;
   font-size: 1.1rem;
   font-weight: 550;
 }
-.checked { 
+
+.checked {
   text-decoration: line-through;
 }
