--- a/src/style.css
+++ b/src/style.css
@@ -1,86 +1,93 @@
 * {
-  padding: 0;
   margin: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
 body {
-  width: 100vw;
-  min-height: 100vh;
+  background: #fff;
+  color: #000;
+  font-family: 'Montserrat', sans-serif;
+}
+
+header {
+  font-size: 1.5rem;
+}
+
+header,
+form {
+  min-height: 20vh;
   display: flex;
   justify-content: center;
-  font-family: sans-serif;
-}
-
-button:hover {
-  cursor: pointer;
-  background-color: #d9ddd6;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.container {
-  min-width: 700px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  padding: 20px;
 }
 
-h1 {
-  color: #141414;
-  font-size: 3rem;
+form input {
+  padding: 0.5rem;
+  width: 45%;
+  font-size: 2rem;
+  border: 2px solid #000;
+  background: white;
 }
 
-.todo-form {
-  margin: 40px 0;
+form button {
+  padding: 0.5rem;
+  font-size: 2rem;
+  border: 2px solid #000;
+  background: white;
+  cursor: pointer;
+  transition: all 0.5s;
 }
 
-.todo-input {
-  width: 250px;
-  border: 1px solid #9e9c9c;
-  outline: none;
-  padding: 10px;
-  margin-right: 10px;
+form button:hover {
+  background-color: #000;
+  color: white;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 40%;
+  list-style: none;
+}
+
+.todo {
+  margin: 0.5rem;
+  background: white;
+  border: 2px solid #000;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todo li {
+  flex: 1;
+}
+
+.check-btn,
+.delete-btn {
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
   font-size: 1rem;
 }
 
-.add-button {
-  background-color: #f8f6f6;
-  color: #141414;
-  border: none;
-  outline: none;
-  padding: 7px;
-  font-size: 1.2rem;
+.check-btn {
+  border-left: 2px solid #000;
+  border-right: 2px solid #000;
 }
 
-.todo-items {
-  min-width: 350px;
-}
-
-.item {
-  border: 1px solid #9e9c9c;
-  background-color: #f8f6f6;
-  padding: 10px;
-  font-size: 1.1rem;
-}
-
-.checkbox {
-  margin-right: 10px;
-}
-
-.delete-button {
-  float: right;
-  background-color: #f8f6f6;
-  border: 1px solid #9e9c9c;
-  outline: none;
-  padding: 2px 5px;
-  margin-left: 10px;
-  font-size: 1.1rem;
-  font-weight: 550;
-}
-
-.checked {
+.check {
   text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.todo-item {
+  padding: 0 0.5rem;
 }
